--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,12 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
+
 
 ### Eclipse ###
 .apt_generated
@@ -36,3 +33,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+src/test/resources/configuration.properties
