--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+pages/
+features/
+stepsdefinitions/
 ### VS Code ###
 .vscode/
 
